[package]
name = "regigigas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stupiderators = { path = "../stupiderators" }

ahash = "0.7.6"
serde = { version = "1.0.137", features = ["derive"] }
id-arena = "2.2.1"
lasso = "0.6.0"
once_cell = "1.12.0"
