[package]
name = "regigigas"
version = "0.2.0"
edition = "2021"

license = "MIT"
description = "Registration system for game objects"
repository = "https://www.github.com/gamma-delta/regigigas"
keywords = ["gamedev"]
categories = ["game-development"]

[dependencies]
stupiderators = "0.1.0"

ahash = "0.7.6"
serde = { version = "1.0.137", features = ["derive"] }
id-arena = "2.2.1"
lasso = "0.6.0"
once_cell = "1.12.0"
